--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
             const defaultVideoId = 'WuJXXJBfMdU'; // Cockpit takeoff video
             
             const iframe = document.createElement('iframe');
-            iframe.src = `https://www.youtube.com/embed/${defaultVideoId}?autoplay=1&rel=0&start=10`;
+            iframe.src = `Untitled video - Made with Clipchamp (1) (1) (1).mp4`;
             iframe.width = '100%';
             iframe.height = '100%';
             iframe.frameBorder = '0';
